--- a/culturefeed_social/translations/culturefeed_social.nl.po
+++ b/culturefeed_social/translations/culturefeed_social.nl.po
@@ -31,18 +31,18 @@
 #  theme/culturefeed-social-user-notifications-page.tpl.php: n/a
 #  theme/theme.inc: n/a
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2013-08-02 09:12+0200\n"
-"PO-Revision-Date: 2013-08-02 09:12+0200\n"
+"POT-Creation-Date: 2013-07-29 14:45+0200\n"
+"PO-Revision-Date: 2013-07-29 15:45+0100\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Dutch <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"X-Generator: Poedit 1.5.7\n"
 
 #: culturefeed_social.module:283
 msgid "Culturefeed social: recent site activities"
@@ -78,7 +78,7 @@ msgstr "Acties"
 
 #: culturefeed_social.module:372
 msgid "Set which user actions are visible to others on your profile page."
-msgstr ""
+msgstr "Bekijk je acties en bepaal wat zichtbaar is voor anderen"
 
 #: culturefeed_social.module:446
 msgid "Filter events on"
@@ -93,33 +93,36 @@ msgid "Remove from list"
 msgstr "Schrijf je uit"
 
 #: culturefeed_social.module:531;641
-msgid "You're currently receiving updates of new comments. <br/>!link to get no more posts."
+msgid ""
+"You're currently receiving updates of new comments. <br/>!link to get no "
+"more posts."
 msgstr ""
-"Je ontvangt momenteel updates van nieuwe reacties.<br />!link om geen "
+"Je ontvangt momenteel e-mailupdates van nieuwe berichten.<br />!link om geen "
 "berichten meer te ontvangen."
 
 #: culturefeed_social.module:543
 msgid "Receive email about new comments"
-msgstr "Blijf via e-mail op de hoogte van nieuwe reacties"
+msgstr "Ja, hou mij via e-mail op de hoogte van nieuwe reacties"
 
 #: culturefeed_social.module:560;719
 msgid "Submit"
-msgstr "Indienen"
+msgstr "Verzenden"
 
 #: culturefeed_social.module:603
-msgid "Due to technical problems it is currently not possible to send your message. Do not hesitate to directly contact via @site"
+msgid ""
+"Due to technical problems it is currently not possible to send your message. "
+"Do not hesitate to directly contact via @site"
 msgstr ""
-"Door technische problemen is het momenteel niet mogelijk om jouw "
-"boodschap te versturen. Aarzel niet om rechtstreeks met ons contact op "
-"te nemen via @site"
+"Door technische problemen is het momenteel niet mogelijk om jouw bericht te "
+"versturen. Aarzel niet om rechtstreeks met ons contact op te nemen via @site"
 
 #: culturefeed_social.module:606
 msgid "Your response should not exceed 250 characters."
-msgstr "Uw reactie mag de 250 karakters niet overschrijden."
+msgstr "Jouw reactie mag maximaal 250 tekens bevatten."
 
 #: culturefeed_social.module:631
 msgid "Your !comment has been sent."
-msgstr "Je !comment is verstuurd."
+msgstr "Jouw !comment is verstuurd."
 
 #: culturefeed_social.module:687
 msgid "Message test"
@@ -127,15 +130,16 @@ msgstr "Test"
 
 #: culturefeed_social.module:688
 msgid "Please tell us why you think this is an inappropriate response"
-msgstr "Geef aan waarom dit volgens u een ongepaste reactie is"
+msgstr "Laat ons weten waarom deze inhoud ongepast is"
 
 #: culturefeed_social.module:704
 msgid "Send message as"
-msgstr "Stuur bericht als"
+msgstr "Verzend bericht als"
 
 #: culturefeed_social.module:763
 msgid "Something went wrong while sending"
-msgstr "Er ging iets fout tijdens het versturen"
+msgstr ""
+"Er is een onverwachte fout opgetreden bij het verzenden van het bericht"
 
 #: culturefeed_social.module:777
 msgid "Message sent"
@@ -143,35 +147,35 @@ msgstr "Het bericht werd verstuurd"
 
 #: culturefeed_social.module:32 culturefeed_social.info:0
 msgid "CultureFeed Social"
-msgstr ""
+msgstr "CultureFeed Social"
 
 #: culturefeed_social.module:33
 msgid "Change CultureFeed Social settings"
-msgstr ""
+msgstr "Wijzig instellingen CulturFeed Social"
 
 #: culturefeed_social.module:42
 msgid "Administer actions"
-msgstr "Acties beheren"
+msgstr "Beheer jouw acties"
 
 #: culturefeed_social.module:51
 msgid "Undo action"
-msgstr ""
+msgstr "Ongedaan maken"
 
 #: culturefeed_social.module:61;71
 msgid "Abuse form"
-msgstr "Meldformulier"
+msgstr "Formulier meld ongepaste inhoud"
 
 #: culturefeed_social.module:81
 msgid "Edit action privacy"
-msgstr ""
+msgstr "Bewerk privacy instelling"
 
 #: culturefeed_social.module:91
 msgid "Unfollow node"
-msgstr ""
+msgstr "Niet meer volgen."
 
 #: culturefeed_social.module:102
 msgid "Do action"
-msgstr ""
+msgstr "Uitvoeren"
 
 #: culturefeed_social.module:164 includes/blocks.inc:268
 msgid "My notifications"
@@ -179,41 +183,52 @@ msgstr "Mijn meldingen"
 
 #: culturefeed_social.module:174
 msgid "Notifications"
-msgstr ""
+msgstr "Meldingen"
 
 #: culturefeed_social.info:0
-msgid "CultureFeed Social adds the ability to perform social actions (for example: like, comments, follow, ...) on culturefeed items like events, productions, pages..."
+msgid ""
+"CultureFeed Social adds the ability to perform social actions (for example: "
+"like, comments, follow, ...) on culturefeed items like events, productions, "
+"pages..."
 msgstr ""
-"Met CultureFeed Social kan je activiteiten producties en pagina's leuk "
-"vinden, reageren en volgen."
+"Met CultureFeed Social kan je meerdere acties uitvoeren voor activiteiten en "
+"pagina's: vind een activiteit leuk, volg een pagina, plaats een reactie, … ."
 
 #: culturefeed_social.info:0
 msgid "CultureFeed"
-msgstr ""
+msgstr "CultureFeed"
 
 #: includes/admin.inc:22
 msgid "Visible filters on activity lists"
-msgstr "ZIchtbare filters"
+msgstr "Zichtbare filters"
 
 #: includes/admin.inc:29
 msgid "Enable notifications"
-msgstr "Schakel meldingen in "
+msgstr "Activeer meldingen"
 
 #: includes/admin.inc:35
 msgid "Report as abuse messages destination uid"
 msgstr ""
+"Een melding van ongepaste inhoud wordt verstuurd naar deze Drupal "
+"eindgebruiker "
 
 #: includes/admin.inc:37
-msgid "Report as abuse messages will be sent to this account.\n    Only if no destination page was available. Otherwise the message will be sent to all the admins of the page"
+msgid ""
+"Report as abuse messages will be sent to this account.\n"
+"    Only if no destination page was available. Otherwise the message will be "
+"sent to all the admins of the page"
 msgstr ""
+"Een melding van ongepaste inhoud wordt verstuurd naar deze eindgebruiker.\n"
+"    Zodra de inhoud gelinkt is aan een pagina , wordt de melding verstuurd "
+"naar alle beheerders van de pagina."
 
 #: includes/blocks.inc:37;118
 msgid "Recent actions"
-msgstr ""
+msgstr "Recente acties"
 
 #: includes/blocks.inc:70
 msgid "This user didn't do any actions yet"
-msgstr "Deze gebruiker heeft nog geen acties gedaan."
+msgstr "Deze gebruiker heeft nog geen acties uitgevoerd."
 
 #: includes/blocks.inc:82
 msgid "Manage your actions"
@@ -221,15 +236,15 @@ msgstr "Beheer jouw acties"
 
 #: includes/blocks.inc:113
 msgid "Read older messages"
-msgstr "Lees oudere berichten"
+msgstr "Lees eerdere berichten"
 
 #: includes/blocks.inc:251
 msgid "Recommendations"
-msgstr "Beoordelingen"
+msgstr "Aanbevelingen"
 
 #: includes/blocks.inc:269
 msgid "You have no notifications"
-msgstr "Je hebt geen nieuwe meldingen"
+msgstr "Je hebt geen meldingen"
 
 #: includes/blocks.inc:285
 msgid "View all notifications"
@@ -237,7 +252,7 @@ msgstr "Bekijk alle meldingen"
 
 #: includes/pages.inc:58
 msgid "No activities found"
-msgstr "Geen activiteiten gevonden"
+msgstr "Geen acties gevonden"
 
 #: includes/pages.inc:102
 msgid "View profile"
@@ -245,7 +260,7 @@ msgstr "Bekijk profiel"
 
 #: includes/pages.inc:131;237;240;265
 msgid "Remove"
-msgstr "Verwijderen"
+msgstr "Verwijder"
 
 #: includes/pages.inc:139;431
 msgid "Private"
@@ -260,8 +275,8 @@ msgid "Put public"
 msgstr "Zet publiek"
 
 #: includes/pages.inc:141
-msgid "Make private"
-msgstr ""
+msgid "Make privat"
+msgstr "Maak privé"
 
 #: includes/pages.inc:156
 msgid "ago <br />on"
@@ -277,15 +292,15 @@ msgstr "Actie"
 
 #: includes/pages.inc:165
 msgid "Time and publishing channel"
-msgstr "Tijdstip en publicatiekanaal"
+msgstr "Tijdstip en kanaal"
 
 #: includes/pages.inc:167
 msgid "You didn't do any actions yet."
-msgstr "Je hebt nog geen acties gedaan."
+msgstr "Je hebt nog geen acties uitgevoerd."
 
 #: includes/pages.inc:254
 msgid "Are you sure you want to delete your action"
-msgstr "Ben je zeker dat je je actie"
+msgstr "Ben je zeker dat je jouw actie"
 
 #: includes/pages.inc:254
 msgid "permanently"
@@ -293,15 +308,15 @@ msgstr "voor altijd"
 
 #: includes/pages.inc:271
 msgid "Cancel"
-msgstr "Annuleren"
+msgstr "Annuleer"
 
 #: includes/pages.inc:328;367;467
 msgid "An unexpected error has occurred."
-msgstr "Er is iets foutgelopen."
+msgstr "Er is een onverwachte fout opgetreden."
 
 #: includes/pages.inc:399
 msgid "You will no longer receive updates of new comments"
-msgstr "Je ontvangt geen updates meer van nieuwe reacties"
+msgstr "Je zal geen updates meer ontvangen van nieuwe reacties"
 
 #: includes/pages.inc:405
 msgid "You are currently not receiving updates of new comments."
@@ -313,15 +328,15 @@ msgstr "Maak publiek"
 
 #: includes/pages.inc:433
 msgid "Put private"
-msgstr "Zet Privé"
+msgstr "Zet privé"
 
-#: includes/pages.inc:566
+#: includes/pages.inc:564
 msgid "Action could not be undone."
 msgstr "Actie kon niet ongedaan gemaakt worden."
 
 #: lib/Drupal/CultureFeedActivityConfigComment.php:22
 msgid "Reaction by"
-msgstr "Reactie door"
+msgstr "Reactie geplaatst door"
 
 #: lib/Drupal/CultureFeedActivityConfigComment.php:24
 msgid "Write your own comment"
@@ -337,7 +352,7 @@ msgstr "Toon iedereen die reageerde op deze pagina"
 
 #: lib/Drupal/CultureFeedActivityConfigComment.php:29
 msgid "has given comment on"
-msgstr "heeft commentaar gegeven op"
+msgstr "heeft een reactie geplaatst op"
 
 #: lib/Drupal/CultureFeedActivityConfigComment.php:31
 msgid "Comment"
@@ -349,37 +364,47 @@ msgstr "reactie"
 
 #: lib/Drupal/CultureFeedActivityConfigComment.php:33
 msgid "To comment you must be logged"
-msgstr "Om commentaar te geven moet je aangemeld zijn"
+msgstr "Om commentaar te geven moet u aangemeld zijn"
 
 #: lib/Drupal/CultureFeedActivityConfigComment.php:34
 msgid "Post comment as"
-msgstr "Plaats commentaar als"
+msgstr "Plaats reactie als"
 
 #: lib/Drupal/CultureFeedActivityConfigComment.php:35
 msgid "Written response on"
-msgstr "Reactie geschreven op"
+msgstr "Gereageerd op"
 
 #: lib/Drupal/CultureFeedActivityConfigDetail.php:21
 msgid "Read by"
-msgstr "Bekeken door"
+msgstr "Gelezen door"
 
-#: lib/Drupal/CultureFeedActivityConfigDetail.php:22 lib/Drupal/CultureFeedActivityConfigFacebook.php:26 lib/Drupal/CultureFeedActivityConfigMail.php:22 lib/Drupal/CultureFeedActivityConfigNewEvent.php:15 lib/Drupal/CultureFeedActivityConfigPrint.php:24 lib/Drupal/CultureFeedActivityConfigRecommend.php:31 lib/Drupal/CultureFeedActivityConfigReview.php:18 lib/Drupal/CultureFeedActivityConfigTwitter.php:26 lib/Drupal/CultureFeedActivityConfigView.php:23
+#: lib/Drupal/CultureFeedActivityConfigDetail.php:22
+#: lib/Drupal/CultureFeedActivityConfigFacebook.php:26
+#: lib/Drupal/CultureFeedActivityConfigMail.php:22
+#: lib/Drupal/CultureFeedActivityConfigNewEvent.php:15
+#: lib/Drupal/CultureFeedActivityConfigPrint.php:24
+#: lib/Drupal/CultureFeedActivityConfigRecommend.php:31
+#: lib/Drupal/CultureFeedActivityConfigReview.php:18
+#: lib/Drupal/CultureFeedActivityConfigTwitter.php:26
+#: lib/Drupal/CultureFeedActivityConfigView.php:23
 msgid "has"
 msgstr "heeft"
 
 #: lib/Drupal/CultureFeedActivityConfigDetail.php:23
 msgid "seen"
-msgstr "gezien"
+msgstr "bekeken"
 
 #: lib/Drupal/CultureFeedActivityConfigDetail.php:24
 msgid "Read"
 msgstr "gelezen"
 
-#: lib/Drupal/CultureFeedActivityConfigFacebook.php:23;24 lib/Drupal/CultureFeedActivityConfigTwitter.php:23;24
+#: lib/Drupal/CultureFeedActivityConfigFacebook.php:23;24
+#: lib/Drupal/CultureFeedActivityConfigTwitter.php:23;24
 msgid "Share"
 msgstr "Deel"
 
-#: lib/Drupal/CultureFeedActivityConfigFacebook.php:25 lib/Drupal/CultureFeedActivityConfigTwitter.php:25
+#: lib/Drupal/CultureFeedActivityConfigFacebook.php:25
+#: lib/Drupal/CultureFeedActivityConfigTwitter.php:25
 msgid "Shared by"
 msgstr "Gedeeld door"
 
@@ -391,7 +416,8 @@ msgstr "via Facebook gedeeld"
 msgid "Share on Facebook"
 msgstr "Delen via Facebook"
 
-#: lib/Drupal/CultureFeedActivityConfigFacebook.php:29 lib/Drupal/CultureFeedActivityConfigTwitter.php:29
+#: lib/Drupal/CultureFeedActivityConfigFacebook.php:29
+#: lib/Drupal/CultureFeedActivityConfigTwitter.php:29
 msgid "Successfully shared"
 msgstr "Succesvol gedeeld"
 
@@ -399,7 +425,8 @@ msgstr "Succesvol gedeeld"
 msgid "reactions"
 msgstr "reacties"
 
-#: lib/Drupal/CultureFeedActivityConfigFacebook.php:31 lib/Drupal/CultureFeedActivityConfigTwitter.php:30
+#: lib/Drupal/CultureFeedActivityConfigFacebook.php:31
+#: lib/Drupal/CultureFeedActivityConfigTwitter.php:30
 msgid "shared"
 msgstr "gedeeld"
 
@@ -409,7 +436,7 @@ msgstr "Volg deze pagina"
 
 #: lib/Drupal/CultureFeedActivityConfigFollow.php:18
 msgid "Unfollow"
-msgstr "Volg ik niet meer"
+msgstr "Niet meer volgen"
 
 #: lib/Drupal/CultureFeedActivityConfigFollow.php:19
 msgid "I follow this page"
@@ -417,7 +444,7 @@ msgstr "Ik volg deze pagina"
 
 #: lib/Drupal/CultureFeedActivityConfigFollow.php:20
 msgid "Follow as first"
-msgstr "Volg ik als eerste"
+msgstr "Volg als eerste"
 
 #: lib/Drupal/CultureFeedActivityConfigFollow.php:21
 msgid "Show everyone who follows this page"
@@ -449,7 +476,7 @@ msgstr "gaat naar"
 
 #: lib/Drupal/CultureFeedActivityConfigGo.php:22;24
 msgid "Goes to"
-msgstr "Gaan naar"
+msgstr "Gaat naar"
 
 #: lib/Drupal/CultureFeedActivityConfigGo.php:23
 msgid "You must be logged in to indicate that you attend"
@@ -497,7 +524,7 @@ msgstr "verzonden"
 
 #: lib/Drupal/CultureFeedActivityConfigMail.php:24
 msgid "Mails"
-msgstr "Berichten"
+msgstr "E-mails"
 
 #: lib/Drupal/CultureFeedActivityConfigMediaPhoto.php:20
 msgid "has added a new picture"
@@ -505,7 +532,7 @@ msgstr "heeft een nieuwe foto toegevoegd"
 
 #: lib/Drupal/CultureFeedActivityConfigMediaPhoto.php:21
 msgid "Picture added to"
-msgstr "Foto's toegevoegd aan"
+msgstr "Foto toegevoegd aan"
 
 #: lib/Drupal/CultureFeedActivityConfigMediaPhoto.php:22;23
 msgid "Add a picture"
@@ -561,7 +588,7 @@ msgstr "Aangeraden door"
 
 #: lib/Drupal/CultureFeedActivityConfigRecommend.php:24
 msgid "Recommended activity"
-msgstr "Aangeradan activiteit"
+msgstr "Aangeraden activiteit"
 
 #: lib/Drupal/CultureFeedActivityConfigRecommend.php:25
 msgid "Do not recommend activity anymore"
@@ -593,11 +620,11 @@ msgstr "Om aan te raden moet u aangemeld zijn"
 
 #: lib/Drupal/CultureFeedActivityConfigReview.php:19
 msgid "wrote a review"
-msgstr "een beoordeling gegeven"
+msgstr "een beoordeling geschreven"
 
 #: lib/Drupal/CultureFeedActivityConfigReview.php:20
 msgid "review"
-msgstr "beordelen"
+msgstr "beoordeling"
 
 #: lib/Drupal/CultureFeedActivityConfigReview.php:21
 msgid "Reviews"
@@ -609,11 +636,11 @@ msgstr "Schrijf een beoordeling"
 
 #: lib/Drupal/CultureFeedActivityConfigReview.php:23
 msgid "Be the first to write a review"
-msgstr "Geef als eerste een beoordeling"
+msgstr "Schrijf als eerste een beoordeling"
 
 #: lib/Drupal/CultureFeedActivityConfigReview.php:24
 msgid "Reviews for"
-msgstr ""
+msgstr "Beoordelingen voor"
 
 #: lib/Drupal/CultureFeedActivityConfigTwitter.php:27
 msgid "shared on Twitter"
@@ -637,15 +664,15 @@ msgstr "Bekeken"
 
 #: theme/culturefeed-social-activity-summary.tpl.php:31
 msgid "My activities"
-msgstr "Mijn activiteiten"
+msgstr "Mijn acties"
 
 #: theme/culturefeed-social-activity-summary.tpl.php:34
 msgid "activities recommended"
-msgstr "activiteiten aangeraden"
+msgstr "aangeraden activiteiten"
 
 #: theme/culturefeed-social-activity-summary.tpl.php:35
 msgid "books recommended"
-msgstr "boeken aangeraden"
+msgstr "aangeraden boeken"
 
 #: theme/culturefeed-social-activity-summary.tpl.php:36
 msgid "pages I follow"
@@ -673,13 +700,13 @@ msgstr "Je hebt geen nieuwe meldingen"
 
 #: theme/culturefeed-social-user-notifications-page.tpl.php:15
 msgid "Previously read messages"
-msgstr "Eerder gelezen meldingen"
+msgstr "Reeds gelezen meldingen"
 
 #: theme/culturefeed-social-user-notifications-page.tpl.php:4
 msgid "@count nieuwe melding"
 msgid_plural "@count nieuwe meldingen"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "@count nieuwe melding"
+msgstr[1] "@count nieuwe meldingen"
 
 #: theme/theme.inc:57
 msgid "Yesterday at"
@@ -699,13 +726,12 @@ msgstr "van"
 
 #: theme/theme.inc:193
 msgid "Delete"
-msgstr "Verwijderen"
+msgstr "Verwijder"
 
 #: theme/theme.inc:208
 msgid "Reply"
-msgstr "Beantwoord"
+msgstr "Reageer"
 
 #: theme/theme.inc:237
 msgid "Report as inappropriate"
 msgstr "Meld als ongepast"
-
